src/styles/global.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

:root {
    /* #region @REF-TOKENS */
    --ref-color-black: rgba(0, 0, 0, 1);
    --ref-color-black-a10: rgba(0, 0, 0, 0.1);
    --ref-color-black-a20: rgba(0, 0, 0, 0.2);
    --ref-color-black-a30: rgba(0, 0, 0, 0.3);
    --ref-color-black-a40: rgba(0, 0, 0, 0.4);
    --ref-color-black-a50: rgba(0, 0, 0, 0.5);
    --ref-color-black-a60: rgba(0, 0, 0, 0.6);
    --ref-color-black-a70: rgba(0, 0, 0, 0.7);
    --ref-color-black-a80: rgba(0, 0, 0, 0.8);
    --ref-color-black-a90: rgba(0, 0, 0, 0.9);

    --ref-color-white: rgba(255, 255, 255, 1);
    --ref-color-white-a10: rgba(255, 255, 255, 0.1);
    --ref-color-white-a20: rgba(255, 255, 255, 0.2);
    --ref-color-white-a30: rgba(255, 255, 255, 0.3);
    --ref-color-white-a40: rgba(255, 255, 255, 0.4);
    --ref-color-white-a50: rgba(255, 255, 255, 0.5);
    --ref-color-white-a60: rgba(255, 255, 255, 0.6);
    --ref-color-white-a70: rgba(255, 255, 255, 0.7);
    --ref-color-white-a80: rgba(255, 255, 255, 0.8);
    --ref-color-white-a90: rgba(255, 255, 255, 0.9);

    --ref-color-gray: rgba(127, 127, 127, 1);
    /* #endregion */

    /* #region @SYS-TOKENS */
    --sys-color-scrollbar: rgba(60, 0, 255, 0.5);
    /* #endregion */
}

@media (prefers-color-scheme: light) {
    :root {
        /* #region @SYS-TOKENS */
        --sys-color-text: var(--ref-color-black);
        --sys-color-text-hover: var(--ref-color-white);

        --sys-color-nav-border: var(--ref-color-black-a50);
        --sys-color-nav-border-hover: var(--ref-color-white-a50);

        --sys-color-nav-background: var(--ref-color-white-a30);
        --sys-color-nav-background-hover: var(--ref-color-black-a30);

        --sys-color-card-background: var(--ref-color-white-a30);
        --sys-color-card-avatar: var(--ref-color-white);
        --sys-color-card-shadow: var(--ref-color-white-a30);
        --sys-color-card-border: var(--ref-color-black-a40);

        --sys-color-code-background: var(--ref-color-black-a70);
        /* #endregion */

        .astro-code,
        .astro-code span {
            color: var(--shiki-light);
        }
    }
}

@media (prefers-color-scheme: dark) {
    :root {
        /* #region @SYS-TOKENS */
        --sys-color-text: var(--ref-color-white);
        --sys-color-text-hover: var(--ref-color-black);

        --sys-color-nav-border: var(--ref-color-white-a50);
        --sys-color-nav-border-hover: var(--ref-color-black-a50);

        --sys-color-nav-background: var(--ref-color-black-a30);
        --sys-color-nav-background-hover: var(--ref-color-white-a30);

        --sys-color-card-background: var(--ref-color-black-a60);
        --sys-color-card-avatar: var(--ref-color-black);
        --sys-color-card-shadow: var(--ref-color-black-a50);
        --sys-color-card-border: var(--ref-color-white-a40);

        --sys-color-code-background: var(--ref-color-black-a70);
        /* #endregion */

        .astro-code,
        .astro-code span {
            color: var(--shiki-dark);
        }
    }
}

html {
    overflow-y: scroll;
    scrollbar-color: var(--sys-color-scrollbar) transparent;
}

::-webkit-scrollbar-track {
    background: transparent;
}

::-webkit-scrollbar-thumb {
    background: var(--sys-color-scrollbar);
}

body {
    display: grid;
    grid-template-rows: auto 1fr auto;
    gap: 1rem;
    margin: 1.5rem 4rem;
    min-height: calc(100vh - 3rem);
    background-image: url("/images/background.png");
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    background-repeat: no-repeat;
}

.header {
    padding: 1rem;
    text-align: center;
}

.footer {
    padding: 1rem;
    font-size: large;
    text-align: center;
    color: var(--sys-color-text);
}

/* #region @BLOCK: NAVIGATION */

.navigation {
    display: flex;
    justify-content: center;
}

.navigation a {
    border-style: solid;
    border-color: var(--sys-color-nav-border);
    border-radius: 7px;

    color: var(--sys-color-text);
    text-decoration: none;

    background-color: var(--sys-color-nav-background);
    transition:
        color 0.3s ease,
        border-color 0.3s ease,
        background-color 0.3s ease;
}

.navigation a:hover {
    border-color: var(--sys-color-nav-border-hover);
    border-radius: 7px;

    color: var(--sys-color-text-hover);

    background-color: var(--sys-color-nav-background-hover);
}

.navigation--header {
    flex-direction: row;
    gap: 1rem;
}

.navigation--header a {
    margin: 0;
    padding: 0.3rem 0.7rem;
    border-width: 2px;
    text-align: center;
}

.navigation--main {
    flex-direction: column;
    gap: 0.3rem;
}

.navigation--main a {
    margin: 0;
    padding: 0.3rem;
    border-width: 3px;
    font-size: x-large;
    text-align: center;
}

/* #endregion */

/* #region @BLOCK: MAIN */

.main {
    display: flex;
    gap: 1rem;
}

/* #region @ELEMENT: SIDEBAR */

.main__sidebar {
    position: sticky;
    top: 1rem;

    display: grid;
    grid-template-rows: auto auto auto;
    gap: 0.3rem;

    flex: 0 0 min-content;
    align-self: flex-start;

    padding: 1.25rem;
}

.main__sidebar p {
    margin: 0;
    font-size: xx-large;
    text-align: center;
    color: var(--sys-color-text);
}

.main__sidebar img {
    display: block;
}

/* #endregion */

.main__avatar {
    display: block;
    width: 100%;
    border-radius: 7%;
    box-shadow: 0 0 10px var(--sys-color-card-avatar);
}

/* #region @ELEMENT: CONTENT */

.main__content {
    display: grid;
    grid-template-columns: 1fr;
    gap: 1rem;
    align-items: start;

    flex: 1;
    align-self: stretch;

    min-width: 0;
}

.main__content--card {
    padding: 2rem;

    color: var(--sys-color-text);
    text-decoration: none;
}

.main__content--card> :first-child {
    margin-top: 0;
}

.main__content--card> :last-child {
    margin-bottom: 0;
}

.main__content--post {
    min-height: 100%;
    padding: 2rem;

    color: var(--sys-color-text);
}

.main__content--post> :first-child {
    margin-top: 0;
}

.main__content--post> :last-child {
    margin-bottom: 0;
}

/* #endregion */

/* #endregion */

.glass-card {
    border-radius: 12px;

    background: var(--sys-color-card-background);
    backdrop-filter: blur(6px) saturate(100%);
    -webkit-backdrop-filter: blur(6px) saturate(100%);
    box-shadow:
        0 0 6px var(--sys-color-card-shadow),
        inset 0 0 0 1px var(--sys-color-card-border);
}

/* #region @GLOBAL: CODE */

.astro-code {
    margin: 1.5rem 0;
    padding: 1rem;
    border-radius: 7px;

    font-size: 0.9rem;
    line-height: 1.6;

    background-color: var(--sys-color-code-background);
}

.astro-code code {
    font-family: "JetBrains Mono", "Fira Code", Consolas, monospace;
}

:not(pre)>code {
    padding: 0.15em 0.35em;
    border-radius: 0.2em;

    background-color: var(--sys-color-code-background);
}

/* #endregion */

